--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <title>WebGPU Hello Triangle</title>
     </head>
     <body>
-        <canvas id="gfx"></canvas>
+        <button id="remove">删除模型</button>
+        <button id="add">增加模型</button>
+        <div>    <canvas id="gfx" ></canvas></div>
         <script type="text/javascript" src="dist/main.js"></script>
     </body>
 </html>
